# awesome-cs

./: .gitignore  package-lock.json  roadmap.md
Algorithm/LeetCode/: README.md
BE/C++/: .gitignore
BE/Lua/: module.lua  【01】基本语法.lua  【02】数据类型.lua  【04】循环.lua  【05】流程控制.lua  【06】函数.lua  【07】运算符.lua  【10】迭代器.lua  【12】模块与包.lua  【15】文件 IO.lua  【16】错误处理.lua  【18】垃圾回收.lua  【19】面向对象.lua  【20】数据库访问.lua
BE/Rust/bilibili/Rust_Advance/oop/: Cargo.toml  oo3.rs
BE/Rust/bilibili/Rust_Advance/oop/main/src/: main.rs
Compiling/Luago/: Luago  hello_world.lua  main.go
DB/: NEWCODER.md
DB/mit6.830/: README.md
DevOps/Kubernetes/: Kubernetes网络原理及方案.md  Untitled.md  k8s中的网络.md
DevOps/MyDocker/: .gitignore
Docker/: 新建文件.md
Go/Go_Basic/: hello  hello.go  main.go
Language/: README.md
Language/Assembly/: README.md
Language/Clojure/: README.md
Language/Elixir/: Decision Making.ex  Keyword Lists.ex  Maps.ex  Pattern Matching.ex  README.md  数据类型.ex
Language/Lisp/: README.md
Language/OCaml/: a.md
Language/Perl/: README.md
Lua/Luago/: Luago
Mobile/SimpleAndroid/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
Network/cs144/: README.md
OS/comp2017/: README.md
OS/cs140e/: README.md
OS/cs162/: README.md
OS/mit6.828 6.828/: README.md
OS/os161/: README.md
OS/xv6/: README.md
Ruby/Ruby_Basic/: hello.rb
Ruby/Ruby_RUNNOOB/: hello.rb  【03】类和对象.rb  【04】变量.rb
Rust/Rust_Advance/: readme.txt
Rust/Rust_Basic/: .gitignore
Rust/block_chain/: Cargo.toml
Rust/block_chain/utils/: Cargo.toml
Tools/comp9017/: README.md
(+820 files in other folders)
