[package]
name = "utils"
version = "0.1.0"
authors = ["chengkun <276128749@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
bincode = "1.2.1"
rust-crypto = "0.2"
db-key = "0.0.5"
bigint = "4"
